# paper-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  RELEASE_AUDIT.md  SECURITY.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: academic-writing-basis.md  architecture.md  evaluation-protocol.md  model-providers.md  requirements-traceability.md  research-informed-design.md  runtime-and-recovery.md  writing-skill.md
examples/demo/: assignment.md  example-1.md  example-2.md  example-3.md  source.txt
src/paper_agent/: __init__.py  __main__.py  audit.py  cli.py  drafting.py  evidence.py  exporting.py  genres.py  ingest.py  models.py  planning.py  providers.py  requirements.py  runtime.py  skill.py  storage.py  workflow.py
tests/: test_audit.py  test_cli.py  test_docs.py  test_evaluation.py  test_evidence.py  test_genres.py  test_ingest.py  test_planning.py  test_providers.py  test_requirements.py  test_runtime.py  test_skill.py  test_workflow.py
