[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-agent-cli"
version = "0.2.0"
description = "A source-grounded, example-adaptive CLI writing agent for Chinese university papers."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Paper Agent contributors"}]
keywords = ["academic-writing", "cli", "agent", "chinese", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "reportlab>=4,<5",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[project.scripts]
paper-agent = "paper_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["paper_agent"]
